fix bug on mobile
Fix: When mobile screen there are part of content under white block (incorrect calculating height of html and body tags)

--- a/main_p.css
+++ b/main_p.css
@@ -18,6 +18,7 @@ body,html{height:100%}
         width:100%!important;
         height:100%!important
     }
+    body,html{height:auto}
     main .desc{font-size:1.2em}
 }
 @media screen and (max-width:335px){h1{font-size:36pt!important}}
